kubernetes/k3s-on-lxd/echo/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: echo-deploy
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: inanimate/echo-server
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
